--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import PostInfoFull from "src/components/PostInfoFull.astro";
 
 import ColorPalette from "src/components/ColorPalette.astro";
 import FriendList from "src/components/FriendList.astro";
+import TheSearch from "~/components/TheSearch.astro";
 ---
 
 <LayoutEmpty>
@@ -14,6 +15,12 @@ import FriendList from "src/components/FriendList.astro";
     <p class="text-3xl font-bold mb-3 text-one-front">Yixuan Wang's Blog</p>
     <p class="text-xl font-mono"><span>|</span><span class="text-one-front">_</span><span>|</span><span>&nbsp;</span><span class="text-one">todo!</span><span>()</span></p>
   </header>
+
+  <!-- A search section -->
+  <section class="flex flex-col gap-3">
+    <h2 class="text-2xl font-bold text-one-front">Search</h2>
+    <TheSearch />
+  </section>
 
   <section class="flex flex-col gap-3">
     <h2 class="text-2xl font-bold text-one-front">Recent Posts</h2>
