--- a/src/components/ColorPalette.astro
+++ b/src/components/ColorPalette.astro
@@ -258,7 +258,7 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
 ];
 ---
 
-<div class="px-2 py-1 flex flex-row gap-2 items-center">
+<div class="px-2 py-1 flex flex-row flex-wrap gap-2 items-center">
   {
     prebuiltColorPalettes.map((color, index) => (
       <BaseHover>
