--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -210,32 +210,32 @@ input {
 .shiki {
   --shiki-color-var-foreground: rgb(var(--color-front));
   --shiki-color-var-background: color-mix(in oklab, white, rgb(var(--color-one)) 15%);
-  --shiki-color-var-builtin: color-mix(in oklab, crimson, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-constant: color-mix(in oklab, darkorange, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-string: color-mix(in oklab, green, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-comment: color-mix(in oklab, gray, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-keyword: color-mix(in oklab, purple, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-parameter: color-mix(in oklab, red, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-function: color-mix(in oklab, blue, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-escape: color-mix(in oklab, magenta, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-punctuation: color-mix(in oklab, darkgray, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-type: color-mix(in oklab, gold, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-macro: color-mix(in oklab, teal, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-generic: color-mix(in oklab, lightblue, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-builtin: color-mix(in oklab, #d20f39, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-constant: color-mix(in oklab, #fe640b, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-string: color-mix(in oklab, #40a02b, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-comment: color-mix(in oklab, #9ca0b0, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-keyword: color-mix(in oklab, #8839ef, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-parameter: color-mix(in oklab, #e64553, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-function: color-mix(in oklab, #1e66f5, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-escape: color-mix(in oklab, #ea76cb, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-punctuation: color-mix(in oklab, #7c7f93, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-type: color-mix(in oklab, #df8e1d, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-macro: color-mix(in oklab, #179299, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-generic: color-mix(in oklab, #04a5e5, rgb(var(--color-one-front)) 60%);
 }
 
 :root.dark .shiki {
   --shiki-color-var-background: color-mix(in oklab, black, rgb(var(--color-one)) 25%);
-  --shiki-color-var-builtin: color-mix(in oklab, crimson, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-constant: color-mix(in oklab, darkorange, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-string: color-mix(in oklab, green, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-comment: color-mix(in oklab, gray, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-keyword: color-mix(in oklab, purple, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-parameter: color-mix(in oklab, red, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-function: color-mix(in oklab, blue, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-escape: color-mix(in oklab, magenta, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-punctuation: color-mix(in oklab, darkgray, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-type: color-mix(in oklab, gold, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-macro: color-mix(in oklab, teal, rgb(var(--color-one-front)) 60%);
-  --shiki-color-var-generic: color-mix(in oklab, lightblue, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-builtin: color-mix(in oklab, #e05561, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-constant: color-mix(in oklab, #f0a45d, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-string: color-mix(in oklab, #98c379, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-comment: color-mix(in oklab, #7f848e, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-keyword: color-mix(in oklab, #c678dd, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-parameter: color-mix(in oklab, #ff616e, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-function: color-mix(in oklab, #4aa5f0, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-escape: color-mix(in oklab, #de73ff, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-punctuation: color-mix(in oklab, #abb2bf, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-type: color-mix(in oklab, #e5c07b, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-macro: color-mix(in oklab, #42b3c2, rgb(var(--color-one-front)) 60%);
+  --shiki-color-var-generic: color-mix(in oklab, #d19a66, rgb(var(--color-one-front)) 60%);
 }
