perf: stablize search

--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -18,6 +18,11 @@ const headerItems: HeaderItem[] = [
     url: "tags",
   },
   {
+    title: "Search",
+    icon: "i-mdi-text-box-search",
+    url: "search",
+  },
+  {
     title: "Friends",
     icon: "i-mdi-account-box",
     url: "friends",
