--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,9 +74,9 @@ body.cloak {
 }
 
 :root {
-  --font-sans: var(--font-custom-sans, "Inter", "Noto Sans CJK SC"), "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Avenir Next", "Helvetica Neue", sans-serif;
-  --font-serif: var(--font-custom-serif, "Source Serif 4", "Noto Serif CJK SC"), "New York", "Roboto Slab", Cambria, Georgia, Times, "Times New Roman", serif;
-  --font-mono: var(--font-custom-mono, "JetBrains Mono", "Noto Sans CJK SC"), DengXian, "SF Mono", "Droid Sans Mono", Menlo, "Cascadia Code", Consolas, Courier, "Courier New", monospace;
+  --font-sans: var(--font-custom-sans, "Inter"), var(--font-custom-sans-cjk, "Noto Sans CJK SC"), sans-serif;
+  --font-serif: var(--font-custom-serif, "Source Serif 4"), var(--font-custom-serif-cjk, "Noto Serif CJK SC");
+  --font-mono: var(--font-custom-mono, "JetBrains Mono"), var(--font-custom-mono-cjk, "Noto Sans CJK SC");
 }
 
 :root:not(.dark) {
