--- a/src/styles/post-typeface.css
+++ b/src/styles/post-typeface.css
@@ -1,15 +1,18 @@
 /*? Typeface Variables */
-#md h2,
-#md h3,
-#md h4,
-#md h5,
-#md h6,
-#md hr {
-  font-family: var(--font-post-heading);
+html[data-font-post-content="sans"] #md {
+  font-family: var(--font-sans);
 }
 
-#md {
-  font-family: var(--font-post-content);
+html[data-font-post-content="serif"] #md {
+  font-family: var(--font-serif);
+}
+
+html[data-font-post-heading="sans"] #md :is(h2, h3, h4, h5, h6) {
+  font-family: var(--font-sans);
+}
+
+html[data-font-post-heading="serif"] #md :is(h2, h3, h4, h5, h6) {
+  font-family: var(--font-serif);
 }
 
 #md aside {
@@ -20,4 +23,14 @@
 #md code,
 #md kbd {
   font-family: var(--font-mono);
+}
+
+html[data-font-post-content="sans"] #md :is(i, em) {
+  font-family: var(--font-custom-sans, "Inter"), "LXGW WenKai", var(--font-custom-sans-cjk, "Noto Sans CJK SC"), sans-serif;
+  font-synthesis-style: none;
+}
+
+html[data-font-post-content="serif"] #md :is(i, em) {
+  font-family: var(--font-custom-serif, "Source Serif 4"), "LXGW WenKai", var(--font-custom-sans-cjk, "Noto Sans CJK SC"), sans-serif;
+  font-synthesis-style: none;
 }
