--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,9 +11,12 @@ import "src/styles/main.css";
     <meta name="generator" content={Astro.generator} />
     <meta property="og:type" content="website" />
 
-    <!-- Inter font -->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://rsms.me/">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@200..900&family=Noto+Serif+SC:wght@400;700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=JetBrains+Mono:ital,wght@0,200..900;1,200..900&display=swap">
     <style>
       :root {
         font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
