--- a/src/components/TheFooterBuildInfo.astro
+++ b/src/components/TheFooterBuildInfo.astro
@@ -10,7 +10,7 @@ const { version, buildTimestamp } = siteMeta;
   >
   <Fragment slot="content">
     <div
-      class="px-1.5 py-1 flex flex-col gap-0.5 rounded bg-front text-back font-mono"
+      class="px-1.5 py-1 flex flex-col gap-0.5 rounded bg-one-back text-one-front font-mono"
     >
       <span class="text-sm font-bold">v{version}</span>
       <span class="inline-flex items-center gap-0.5 text-xs">
