--- a/src/components/ColorPalette.astro
+++ b/src/components/ColorPalette.astro
@@ -11,82 +11,38 @@ interface PrebuildColorPalette extends ColorPaletteSetting {
 
 const prebuiltColorPalettes: PrebuildColorPalette[] = [
   {
-    name: "Red",
+    name: "Flame",
     one: {
       mode: "oklch",
       l: 0.6100,
       c: 0.215,
       h: 23.81,
     },
+    /* 62.97% 0.218 18.81 */
     two: {
-      mode: "oklch",
-      l: 0.562,
-      c: 0.165,
-      h: 8.58,
-    },
-  },
-  {
-    name: "Orange",
-    one: {
       mode: "oklch",
       l: 0.6926,
       c: 0.191,
       h: 44.02,
     },
-    two: {
+  },
+  {
+    name: "Honey",
+    one: {
       mode: "oklch",
-      l: 0.6458,
-      c: 0.172,
-      h: 32.27,
-    },
-  },
-  {
-    name: "Tangerine",
-    one: {
-        mode: "oklch",
-        l: 0.7100,
-        c: 0.215,
-        h: 70.00,
+      l: 0.7701,
+      c: 0.170,
+      h: 57.10,
     },
     two: {
-        mode: "oklch",
-        l: 0.7600,
-        c: 0.230,
-        h: 77.50,
-    },
-  },
-  {
-    name: "Yellow",
-    one: {
       mode: "oklch",
       l: 0.8222,
       c: 0.169,
       h: 80.91,
     },
-    two: {
-      mode: "oklch",
-      l: 0.8775,
-      c: 0.166,
-      h: 93.16,
-    },
   },
   {
-    name: "Lime",
-    one: {
-        mode: "oklch",
-        l: 0.8010,
-        c: 0.198,
-        h: 110.52,
-    },
-    two: {
-        mode: "oklch",
-        l: 0.8512,
-        c: 0.185,
-        h: 118.45,
-    },
-  },
-  {
-    name: "Green",
+    name: "Chloroplast",
     one: {
       mode: "oklch",
       l: 0.5676,
@@ -95,137 +51,32 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
     two: {
       mode: "oklch",
-      l: 0.566,
-      c: 0.148,
-      h: 122.67,
-    },
-  },
-  {
-    name: "Teal",
-    one: {
-      mode: "oklch",
-      l: 0.5626,
+      l: 0.6626,
       c: 0.113,
       h: 170.23,
     },
-    two: {
-      mode: "oklch",
-      l: 0.6967,
-      c: 0.121,
-      h: 182.44,
-    },
   },
   {
-    name: "Cyan",
-    one: {
-      mode: "oklch",
-      l: 0.6967,
-      c: 0.122,
-      h: 217.58,
-    },
-    two: {
-      mode: "oklch",
-      l: 0.6796,
-      c: 0.109,
-      h: 196.34,
-    },
-  },
-  {
-    name: "Blue",
+    name: "Ocean",
     ...(DEFAULT_COLOR_PALETTE as ColorPaletteSetting),
   },
   {
-    name: "Indigo",
+    name: "Dream",
     one: {
       mode: "oklch",
       l: 0.3875,
       c: 0.159,
-      h: 263.84,
+      h: 273.84,
     },
     two: {
-      mode: "oklch",
-      l: 0.6211,
-      c: 0.11,
-      h: 265.42,
-    },
-  },
-  {
-    name: "Purple",
-    one: {
       mode: "oklch",
       l: 0.6138,
       c: 0.179,
       h: 296.66,
     },
-    two: {
-      mode: "oklch",
-      l: 0.5898,
-      c: 0.172,
-      h: 276.38,
-    },
   },
   {
-    name: "Fuchsia",
-    one: {
-        mode: "oklch",
-        l: 0.5780,
-        c: 0.274,
-        h: 315.00,
-    },
-    two: {
-        mode: "oklch",
-        l: 0.6370,
-        c: 0.288,
-        h: 320.00,
-    },
-  },
-  {
-    name: "Pink",
-    one: {
-      mode: "oklch",
-      l: 0.7321,
-      c: 0.146,
-      h: 343.12,
-    },
-    two: {
-      mode: "oklch",
-      l: 0.7034,
-      c: 0.128,
-      h: 329.54,
-    },
-  },
-  {
-    name: "Magenta",
-    one: {
-        mode: "oklch",
-        l: 0.6200,
-        c: 0.180,
-        h: 0.00,
-    },
-    two: {
-        mode: "oklch",
-        l: 0.4500,
-        c: 0.140,
-        h: 10.00,
-    },
-  },
-  {
-    name: "Brown",
-    one: {
-      mode: "oklch",
-      l: 0.4256,
-      c: 0.15,
-      h: 28.76,
-    },
-    two: {
-      mode: "oklch",
-      l: 0.3982,
-      c: 0.134,
-      h: 20.35,
-    },
-  },
-  {
-    name: "Slate",
+    name: "Rock",
     one: {
         mode: "oklch",
         l: 0.5120,
@@ -234,26 +85,11 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
     },
     two: {
         mode: "oklch",
-        l: 0.4678,
-        c: 0.048,
-        h: 210.00,
-    },
-  },
-  {
-    name: "Gray",
-    one: {
-        mode: "oklch",
         l: 0.5500,
         c: 0.000,
         h: 0.00,
     },
-    two: {
-        mode: "oklch",
-        l: 0.6300,
-        c: 0.000,
-        h: 0.00,
-  },
-}
+  }
 
 ];
 ---
@@ -273,10 +109,10 @@ const prebuiltColorPalettes: PrebuildColorPalette[] = [
           class="px-1.5 py-1 rounded text-sm"
           style={{
             color: `rgba(${polyfillOklch(
-              calcColorFunctions.light.back(color.two)
+              calcColorFunctions.light.back(color.one)
             )})`,
             "background-color": `rgba(${polyfillOklch(
-              calcColorFunctions.light.front(color.two)
+              calcColorFunctions.light.front(color.one)
             )})`,
           }}
         >
