--- a/src/pages/tags.astro
+++ b/src/pages/tags.astro
@@ -21,8 +21,8 @@ import TagList from "~/components/TagList.astro";
               <a href={new URL(`${import.meta.env.BASE_URL}category/${category}`, Astro.site)}>{categoryInfo[category]?.name ?? category}</a>
             </h2>
             <div class="flex flex-col">
-              <span class="font-mono">{category}</span>
-              <span class="font-mono">{allCategory[category]!.length}</span>
+              <span class="font-mono font-bold text-one-front">{category}</span>
+              <span class="font-mono pb-2">{allCategory[category]!.length}</span>
               <p>{categoryInfo[category]?.description ?? ""}</p>
             </div>
           </div>
