--- a/src/components/TheHeader.astro
+++ b/src/components/TheHeader.astro
@@ -37,9 +37,9 @@ const headerItems: HeaderItem[] = [
 
 <header id="the-header">
   <nav id="the-header-start">
-    <a href={new URL(import.meta.env.BASE_URL, Astro.site)} title="Home"
-      ><div class="i-mdi-circle"></div></a
-    >
+    <a href={new URL(import.meta.env.BASE_URL, Astro.site)} title="Home" aria-label="Home">
+      <div class="i-mdi-circle" />
+    </a>
   </nav>
   <div class="flex-1"></div>
   <nav id="the-header-end" class="gap-2">
