--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,23 +17,25 @@ import TheSearch from "~/components/TheSearch.astro";
   </header>
 
   <section class="flex flex-col gap-3">
-    <h2 class="text-2xl font-bold text-two-front">Recent Posts</h2>
+    <h2 class="text-2xl font-bold text-one-front">Recent Posts</h2>
     {timeDesc.slice(0, 10).map(key => <PostInfoFull info={PostInfo[key]} />)}
-    <article class="card flex flex-row gap-2 items-center @hover-bg-one-back transition-lively">
-      <div class="i-mdi-inbox" />
-      <h2 class="font-bold @hover-text-one-front transition-lively">
-        <a href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>Archive</a>
-      </h2>
-    </article>
+    <a class="contents" href={new URL(`${import.meta.env.BASE_URL}archive`, Astro.site)}>
+      <article class="card flex flex-row gap-2 items-center @hover-bg-one-back transition-lively">
+        <div class="i-mdi-inbox" />
+        <h2 class="font-bold @hover-text-one-front transition-lively">
+          Archive
+        </h2>
+      </article>
+    </a>
   </section>
 
   <section class="flex flex-col gap-3">
-    <h2 class="text-2xl font-bold text-two-front">Friends</h2>
+    <h2 class="text-2xl font-bold text-one-front">Friends</h2>
     <FriendList />
   </section>
 
   <section class="flex flex-col gap-3">
-    <h2 class="text-2xl font-bold text-two-front">Color Palettes</h2>
+    <h2 class="text-2xl font-bold text-one-front">Color Palettes</h2>
     <ColorPalette />
   </section>
 
