feat: redesign index header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import TheSearch from "~/components/TheSearch.astro";
 
 <LayoutEmpty>
   <header class="flex flex-col">
-    <h1 class="text-6xl font-bold text-one">Pak</h1>
-    <p class="text-3xl font-bold mb-3 text-two">Yixuan Wang's Blog</p>
-    <p class="text-xl font-mono"><span>|</span><span class="text-one-front">_</span><span>|</span><span>&nbsp;</span><span class="text-two-front">todo!</span><span>()</span></p>
+    <h1 class="text-7xl font-bold mb-1 text-one">Pak</h1>
+    <p class="text-3xl font-bold mb-3 text-one-front">Yixuan Wang's Blog</p>
+    <p class="text-xl font-mono"><span>|</span><span class="text-two">_</span><span>|</span><span>&nbsp;</span><span class="text-two-front">todo!</span><span>()</span></p>
   </header>
 
   <section class="flex flex-col gap-3">
