--- a/src/pages/lab/typesetting.astro
+++ b/src/pages/lab/typesetting.astro
@@ -19,11 +19,11 @@ import "src/styles/post.css";
     </section>
     <section class="flex flex-col gap-3">
       <h2 class="text-2xl font-bold text-one-front">Typeface</h2>
-      <TypesettingTypeface client:only />
+      <TypesettingTypeface client:only="svelte" />
     </section>
     <section class="flex flex-col gap-3">
       <h2 class="text-2xl font-bold text-one-front">Font Family</h2>
-      <TypesettingFontFamily client:only />
+      <TypesettingFontFamily client:only="svelte" />
     </section>
   </main>
 </LayoutDefault>
