--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -28,7 +28,7 @@ timeDesc.forEach(key =>
           <p class="pb-4 font-mono text-two-front">{years.collector.get(year)!.length}</p>
           <div class="flex flex-col gap-2">
             {years.collector.get(year)!.map(key => (
-              <PostInfoBrief info={PostInfo[key]} />
+              <PostInfoBrief info={PostInfo[key]} timeFormat="MM/dd" />
             ))}
           </div>
         </section>
