feat: academia homepage

--- a/src/layouts/LayoutEmpty.astro
+++ b/src/layouts/LayoutEmpty.astro
@@ -11,6 +11,9 @@ const { noComments } = Astro.props;
 ---
 
 <BaseLayout>
+  <Fragment slot="head">
+    <slot name="head" />
+  </Fragment>
   <TheHeader />
   <div id="the-main">
     <slot />
